--- a/index.html
+++ b/index.html
@@ -56,16 +56,18 @@
             <p class="author">— Theodore Roosevelt</p>
         </div>
 
-        <div class="sign">
-            <div>
-                <p></p>
-                <p></p>
+        <div class="sign-container">
+            <div class="sign">
+                <div>
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign up</button>
             </div>
-            <button></button>
         </div>
 
         <footer class="footer">
-            <p></p>
+            <p>Copyright © The Odin Project 2021</p>
         </footer>
 
     </body>
