finish rest of the project

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
                         <p>this website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                         <button>Sign up</button>
                     </div>
-                    <div class="right">this is a placeholder for an image</div>
+                    <div class="right"><img src="./img/adam-young-tmtnR-MYM8E-unsplash.jpg"></div>
                 </div>
             </div>
     
 
         <div class="information">
-            <h2>Some random food</h2>
+            <h2>Some random pictures</h2>
             <div class="images">
                 <div class="image" >
                     <img src="./img/adam-young-tmtnR-MYM8E-unsplash.jpg" width="300px">
@@ -51,9 +51,11 @@
             </div>
         </div>
 
-        <div class="quote">
-            <p class="text">"It is not the critic who counts; not the man who points out how the strong man stumbles, or where the doer of deeds could have done them better. The credit belongs to the man who is actually in the arena, whose face is marred by dust and sweat and blood"</p>
-            <p class="author">— Theodore Roosevelt</p>
+        <div class="color">
+            <div class="quote">
+                <p class="text">"It is not the critic who counts; not the man who points out how the strong man stumbles, or where the doer of deeds could have done them better. The credit belongs to the man who is actually in the arena, whose face is marred by dust and sweat and blood"</p>
+                <p class="author">— Theodore Roosevelt</p>
+            </div>
         </div>
 
         <div class="sign-container">
