--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <p>this website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                         <button>Sign up</button>
                     </div>
-                    <div class="right"><img src="./img/adam-young-tmtnR-MYM8E-unsplash.jpg"></div>
+                    <div class="right"><img src="./img/adam-young-tmtnR-MYM8E-unsplash.jpg" width="100%"></div>
                 </div>
             </div>
     
@@ -33,19 +33,19 @@
             <h2>Some random pictures</h2>
             <div class="images">
                 <div class="image" >
-                    <img src="./img/adam-young-tmtnR-MYM8E-unsplash.jpg" width="300px">
+                    <img src="./img/adam-young-tmtnR-MYM8E-unsplash.jpg" width="300">
                     <p>First view</p>
                 </div>
                 <div class="image">
-                    <img src="./img/ali-kazal-cXPCCRfpsU8-unsplash.jpg" width="300px">
+                    <img src="./img/ali-kazal-cXPCCRfpsU8-unsplash.jpg" width="300">
                     <p>Second view</p>
                 </div>
                 <div class="image">
-                    <img src="./img/nizametdinova-MC65ZYQT-ZQ-unsplash.jpg" width="300px">
+                    <img src="./img/nizametdinova-MC65ZYQT-ZQ-unsplash.jpg" width="300">
                     <p>Third view</p>
                 </div>
                 <div class="image">
-                    <img src="./img/tiago-yang-kqMTHjZPzjM-unsplash.jpg" width="300px">
+                    <img src="./img/tiago-yang-kqMTHjZPzjM-unsplash.jpg" width="300">
                     <p>Fourth view</p>
                 </div>
             </div>
